Add register notificationa and email verification
