# routes/api.php
@@ -1,6 +1,8 @@
 <?php
 
-use App\Http\Controllers\Auth\AuthController;
+use App\Http\Controllers\API\Auth\AuthController;
+use App\Http\Controllers\API\Auth\EmailVerificationController;
+use App\Http\Controllers\API\Auth\NewPasswordController;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -14,10 +16,17 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
+// Auth routes
 Route::controller(AuthController::class)->group(function () {
     Route::post('login', 'login');
     Route::post('register', 'register');
     Route::post('logout', 'logout');
     Route::post('refresh', 'refresh');
     Route::get('user', 'user');
+});
+
+// Email
+Route::middleware('auth:api')->group(function(){
+    Route::post('/email-verification', [EmailVerificationController::class, 'email_verification']);
+    Route::get('/email-verification', [EmailVerificationController::class, 'resend_email_verification']);
 });
