# storage/api-docs/api-docs.json
@@ -8,7 +8,7 @@
         "/api/login": {
             "post": {
                 "summary": "Authenticate user and generate JWT token",
-                "operationId": "c373bc4cffa4a56fc64e3979b8ee7b96",
+                "operationId": "2b0c7f9d36d3c5b190b8760b8ae3633e",
                 "parameters": [
                     {
                         "name": "email",
@@ -42,7 +42,7 @@
         "/api/register": {
             "post": {
                 "summary": "Register a new user",
-                "operationId": "ca7c0cb6772de9bffbb8c896980cebc8",
+                "operationId": "afcc4c71c73eaf15048c904cac09d806",
                 "parameters": [
                     {
                         "name": "name",
@@ -85,7 +85,7 @@
         "/api/logout": {
             "post": {
                 "summary": "Logout the authenticated user",
-                "operationId": "5ff2dc8b48bff52908d3821a0ecc9b3e",
+                "operationId": "2e64bb293ab933b3953426e6932d882c",
                 "responses": {
                     "200": {
                         "description": "Logout successful"
@@ -104,7 +104,7 @@
         "/api/refresh": {
             "post": {
                 "summary": "Refresh the JWT token for the authenticated user",
-                "operationId": "6e53f8dae00ca458918da553749b9ae4",
+                "operationId": "93e167eea0fd41745723644caa45cca3",
                 "responses": {
                     "200": {
                         "description": "Token refreshed successfully"
@@ -123,13 +123,72 @@
         "/api/user": {
             "get": {
                 "summary": "Get the current user infos",
-                "operationId": "34648c4883052647b778f3e9d8ac67b9",
+                "operationId": "13888f5dc4557547ca1f81cd6e5ccf84",
                 "responses": {
                     "200": {
                         "description": "Ok"
                     },
                     "401": {
                         "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/email-verification": {
+            "get": {
+                "summary": "Resend the email verification notification",
+                "description": "Resend Email Verification Notification",
+                "operationId": "b3a9d506f86e35cf07035cd4747bdb81",
+                "responses": {
+                    "200": {
+                        "description": "Email verification resent successfully"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "summary": "Verify email with OTP",
+                "description": "Verify Email with OTP",
+                "operationId": "3d3049d74bfcfcf6836ea7ad730a625c",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "otp"
+                                ],
+                                "properties": {
+                                    "otp": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Email verified successfully"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "422": {
+                        "description": "Validation errors"
                     }
                 },
                 "security": [
